# epl-comparison-tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  epl_comparison_app_plan.md  generate_2025_fixtures.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: check-ci.sh
src/: comparison.py  data_fetcher.py  fixture_mapper.py
tests/: test_basic.py  test_comparison.py  test_data_fetcher.py  test_fixture_mapper.py
tests/data/: sample_championship_standings_2024.json  sample_fixtures_2025.json
